Fix: Resizes cards to fit in 2 columns on mobile

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -172,7 +172,6 @@ div.card {
   background-color: rgb(129, 199, 132);
   color: #F5F5DC;
   box-shadow: 6px 6px rgba(0, 51, 102, 0.6);
-  overflow-y: auto;
   height: 95%;
   overflow-x: hidden;
 }
@@ -189,10 +188,12 @@ div.card-content {
   flex-direction: column;
   align-items: center;
   gap: 16px;
+  overflow-y: auto;
 }
 
 div.console-name, div.game-name {
   font-size: 1.3rem;
+  text-align: center;
 }
 
 button {
@@ -387,7 +388,7 @@ button.get-my-url {
 
 @media only screen and (max-width: 600px) {
   div.banner {
-    padding: 16px 12px;
+    padding: 12px 10px;
   }
 
   div.menu-options {
@@ -411,7 +412,45 @@ button.get-my-url {
   }
 
   div.card-list {
-    padding: 4px 20px 20px;
+    grid-template-columns: repeat(2, minmax(150px, 1fr));
+    padding: 4px 16px 20px;
+    gap: 16px;
+    grid-auto-rows: 350px;
+  }
+
+  div.card {
+    padding: 2px;
+  }
+
+  div.buttons { 
+    padding-bottom: 8px;
+  }
+
+  div.buttons button {
+    padding: 4px 6px;
+  }
+
+  div.console-name, div.game-name {
+    font-size: 1.1rem;
+  }
+
+  .game-picture, .console-picture {
+    max-width: 150px;
+    max-height: 125px;
+  }
+
+  div.card-content {
+    gap: 2px;
+    font-size: 0.9rem;
+  }
+
+  div.emoji-section {
+    width: 100%;
+  }
+
+  div.emoji {
+    font-size: 1.5rem;
+    padding: 1px;
   }
 
   p.intro-text {
